[package]
name = "equation_plotter"
version = "0.1.1"
authors = ["Ben Santora <bensatlantik@gmail.com>"]
description = "A Rust program to plot mathematical equations and save as PNG files."
repository = "https://github.com/bensatlantik/Rust_Binaries"
license = "MIT"
edition = "2021"

[dependencies]
plotters = "0.3"
